layout fix for page containers to prevent side menu from overflowing into footer. Height for containers is not fluid

--- a/css/admin.css
+++ b/css/admin.css
@@ -2,6 +2,7 @@
     width: 250px;
     text-align: left;
     min-height: 500px;
+    margin: auto;
 }
 
     .admin-container .no-files tr,td {
